# fac-zona-sur-main

./: .env.example  .env.production.example  .env.production.tmp  .git_diff  .git_status  .gitignore  ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MODULES_STATUS.md  Makefile  QUICK_FIXES.md  README.md  TESTING_GUIDE.md  docker-compose.yml  factura-cr-dashboard.html  nginx_facturas.conf.final.tmp  nginx_facturas.conf.tmp  package.json  pnpm-lock.yaml  setup-cert.bat  start.bat  start.sh  test_polling.py  tico-20260313-1904.txt  visual_test_hacienda.py
facturador/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
facturador/app/: main.py
facturador/app/core/: config.py  constants.py  logging.py
facturador/app/domain/billing/: entities.py  events.py  rules.py  value_objects.py
facturador/app/domain/certificates/: entities.py
facturador/app/domain/common/: enums.py  exceptions.py  money.py
facturador/app/domain/customers/: entities.py
facturador/app/domain/products/: entities.py
facturador/app/infrastructure/db/: session.py
facturador/app/infrastructure/observability/: audit_logger.py
facturador/app/interfaces/http/: deps.py
facturador/app/workers/: celery_app.py
facturador/app/workers/tasks/: issue_document.py  (+2 more)
facturador/migrations/: env.py
facturador/migrations/versions/: 0001_initial.py
facturador/tests/e2e/: test_invoice_api_contract.py
facturador/tests/integration/: test_health.py
facturador/tests/unit/: test_consecutive_atomicity.py  test_document_transitions.py  test_idempotency.py  test_status_sync.py
(+173 files in other folders)
