[project]
name = "facturador"
version = "0.1.0"
description = "Motor fiscal portable para facturacion electronica CR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "lxml>=5.3.0",
  "signxml>=3.2.1",
  "cryptography>=43.0.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10.7"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "anyio>=4.4.0",
  "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
  ".venv",
  "__pycache__",
  ".tmp",
  ".pip_tmp",
  ".pip_tracker",
  ".storage",
  "pytest-cache-files-*"
]

[tool.alembic]
script_location = "migrations"

[tool.ruff]
line-length = 100
